# img_server

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.txt  data  descriptions.json  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-06-20-cleanup-and-unraid-deployment.md  2026-06-22-battery-voltage-parameter.md
docs/superpowers/specs/: 2026-06-20-cleanup-and-unraid-deployment-design.md
scripts/: convert.py
src/: main.rs  svg-process.rs  svg_process.rs
