[package]
name = "img_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ecmwf-opendata = "0.1.4"
image = "0.25.9"
open-meteo-rs = "0.0.5"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.46.0"
tiny-skia = "0.11.4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
usvg = "0.46.0"
plotters = "0.3.3"
